2010-07-03  Robert Larice
 * src/frontend/evaluate.c ,
 * src/include/fteparse.h :
        ansi style function args for some function pointers

2010-07-03  Robert Larice
 * src/ciderlib/support/database.c ,
 * src/ciderlib/support/logfile.c ,
 * src/ciderlib/support/suprem.c ,
 * src/ciderlib/support/suprmitf.c ,
 * src/ciderlib/twod/twosetup.c ,
 * src/spicelib/devices/nbjt/nbjtacld.c ,
 * src/spicelib/devices/nbjt/nbjtask.c ,
 * src/spicelib/devices/nbjt/nbjtdel.c ,
 * src/spicelib/devices/nbjt/nbjtdest.c ,
 * src/spicelib/devices/nbjt/nbjtdump.c ,
 * src/spicelib/devices/nbjt/nbjtload.c ,
 * src/spicelib/devices/nbjt/nbjtmdel.c ,
 * src/spicelib/devices/nbjt/nbjtmpar.c ,
 * src/spicelib/devices/nbjt/nbjtparm.c ,
 * src/spicelib/devices/nbjt/nbjtpzld.c ,
 * src/spicelib/devices/nbjt/nbjtset.c ,
 * src/spicelib/devices/nbjt/nbjttemp.c ,
 * src/spicelib/devices/nbjt/nbjttrun.c ,
 * src/spicelib/devices/nbjt2/nbt2acld.c ,
 * src/spicelib/devices/nbjt2/nbt2ask.c ,
 * src/spicelib/devices/nbjt2/nbt2del.c ,
 * src/spicelib/devices/nbjt2/nbt2dest.c ,
 * src/spicelib/devices/nbjt2/nbt2dump.c ,
 * src/spicelib/devices/nbjt2/nbt2load.c ,
 * src/spicelib/devices/nbjt2/nbt2mdel.c ,
 * src/spicelib/devices/nbjt2/nbt2mpar.c ,
 * src/spicelib/devices/nbjt2/nbt2parm.c ,
 * src/spicelib/devices/nbjt2/nbt2pzld.c ,
 * src/spicelib/devices/nbjt2/nbt2set.c ,
 * src/spicelib/devices/nbjt2/nbt2temp.c ,
 * src/spicelib/devices/nbjt2/nbt2trun.c ,
 * src/spicelib/devices/numd/numdacld.c ,
 * src/spicelib/devices/numd/numdask.c ,
 * src/spicelib/devices/numd/numddel.c ,
 * src/spicelib/devices/numd/numddest.c ,
 * src/spicelib/devices/numd/numddump.c ,
 * src/spicelib/devices/numd/numdload.c ,
 * src/spicelib/devices/numd/numdmdel.c ,
 * src/spicelib/devices/numd/numdmpar.c ,
 * src/spicelib/devices/numd/numdparm.c ,
 * src/spicelib/devices/numd/numdpzld.c ,
 * src/spicelib/devices/numd/numdtemp.c ,
 * src/spicelib/devices/numd/numdtrun.c ,
 * src/spicelib/devices/numd2/nud2acld.c ,